# exodia

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: pipeline.yml  tests.yml
assets/css/: style.css
assets/js/: ideas.js
data/: changelog.json  ideas.json  knowledge_base.json  state.json  themes.json
data/runs/: 20260618T154106.json  20260619T090215.json  20260619T113736.json  20260619T114338.json  20260619T114941.json  20260619T115855.json  20260619T120719.json  20260619T132344.json  20260622T090539.json  20260622T112438.json  20260629T084047.json  20260706T083344.json  20260713T102502.json  20260720T100856.json
scripts/: dev_serve.py
src/exodia/: __init__.py  analysis.py  citations.py  cli.py  concepts.py  config.py  corpus.py  corrections.py  db.py  diffing.py  enrich.py  fulltext.py  futurework.py  ideation.py  issues.py  logging_setup.py  matching.py  models.py  parser.py  paths.py  pdfs.py  pipeline.py  plotting.py  render.py  store.py  transcripts.py  upstream.py  util.py  venues.py  webapp.py
src/exodia/moi/: __init__.py  archive.py  evaluation.py  features.py  generator.py  learner.py  llm.py  mock.py  plots.py  reward.py  schema.py  score.py  steering.py  walkforward.py
templates/: about.html  base.html  changelog.html  concepts.html  ideas.html  index.html  papers.html  trends.html
templates/partials/: credits.html  disclaimer.html  mermaid.html  plot_card.html
tests/: conftest.py  test_analysis.py  test_citations.py  test_corpus.py  test_corrections.py  test_db.py  test_diffing.py  test_enrich.py  test_fulltext.py  test_futurework.py  test_ideation_parse.py  test_issues.py  test_matching.py  test_moi.py  test_moi_learner.py  test_parser.py  test_pdfs.py  test_render.py  test_store.py  test_transcripts.py  test_trends.py  test_venues.py  test_webapp.py
tests/fixtures/: aiscientist_ideas.json  arxiv_response.xml  upstream_readme_v1.md  upstream_readme_v2.md
